opam-version: "2.0"
synopsis: ""
description: ""
maintainer: ["Ryan Gibb"]
authors: ["Ryan Gibb"]
license: "LICENSE"
homepage: "https://github.com/RyanGibb/aeon"
doc: "https://url/to/documentation"
bug-reports: "https://github.com/RyanGibb/aeon/issues"
depends: [
  "ocaml" {>= "5.0.0"}
  "dune" {>= "3.4"}
  "eio_main"
  "dns"
  "dns-server" {>= "6.2.2"}
  "dns-tsig"
  "cmdliner"
  "logs"
  "fmt"
  "menhir"
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/RyanGibb/aeon.git"
pin-depends: [
  # https://github.com/mirage/ocaml-ipaddr/issues/113
  ["ipaddr.dev" "git+https://github.com/RyanGibb/ocaml-ipaddr.git#164c8b7d6c570a9ebe9159a75c74c8ad472897a1"]
  ["ipaddr-sexp.dev" "git+https://github.com/RyanGibb/ocaml-ipaddr.git#164c8b7d6c570a9ebe9159a75c74c8ad472897a1"]
  ["ipaddr-cstruct.dev" "git+https://github.com/RyanGibb/ocaml-ipaddr.git#164c8b7d6c570a9ebe9159a75c74c8ad472897a1"]
  ["macaddr.dev" "git+https://github.com/RyanGibb/ocaml-ipaddr.git#164c8b7d6c570a9ebe9159a75c74c8ad472897a1"]
  ["macaddr-sexp.dev" "git+https://github.com/RyanGibb/ocaml-ipaddr.git#164c8b7d6c570a9ebe9159a75c74c8ad472897a1"]
  ["macaddr-cstruct.dev" "git+https://github.com/RyanGibb/ocaml-ipaddr.git#164c8b7d6c570a9ebe9159a75c74c8ad472897a1"]
]