opam-version: "2.0"
synopsis: ""
description: ""
maintainer: ["Ryan Gibb"]
authors: ["Ryan Gibb"]
license: "LICENSE"
homepage: "https://github.com/RyanGibb/aeon"
doc: "https://url/to/documentation"
bug-reports: "https://github.com/RyanGibb/aeon/issues"
depends: [
  "ocaml" {>= "5.0.0"}
  "dune" {>= "3.4"}
  "eio_main"
  "dns"
  "dns-server" {>= "6.2.2"}
  "dns-tsig"
  "cmdliner"
  "logs"
  "fmt"
  "menhir"
  "capnp-rpc-lwt"
  "capnp-rpc-unix"
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/RyanGibb/aeon.git"
pin-depends: [
  # https://github.com/mirage/ocaml-ipaddr/issues/113
  ["ipaddr.dev" "git+https://github.com/mirage/ocaml-ipaddr.git#c60bae53a290e33b99a67b307188bb85b65f0ca6"]
  ["ipaddr-sexp.dev" "git+https://github.com/mirage/ocaml-ipaddr.git#c60bae53a290e33b99a67b307188bb85b65f0ca6"]
  ["ipaddr-cstruct.dev" "git+https://github.com/mirage/ocaml-ipaddr.git#c60bae53a290e33b99a67b307188bb85b65f0ca6"]
  ["macaddr.dev" "git+https://github.com/mirage/ocaml-ipaddr.git#c60bae53a290e33b99a67b307188bb85b65f0ca6"]
  ["macaddr-sexp.dev" "git+https://github.com/mirage/ocaml-ipaddr.git#c60bae53a290e33b99a67b307188bb85b65f0ca6"]
  ["macaddr-cstruct.dev" "git+https://github.com/mirage/ocaml-ipaddr.git#c60bae53a290e33b99a67b307188bb85b65f0ca6"]
  # https://github.com/mirage/capnp-rpc/pull/256
  ["capnp-rpc.dev" "git+https://github.com/talex5/capnp-rpc.git#c06e767b8a4ec5a87a07e62958cdb55d0d59c59d"]
  ["capnp-rpc-lwt.dev" "git+https://github.com/talex5/capnp-rpc.git#c06e767b8a4ec5a87a07e62958cdb55d0d59c59d"]
  ["capnp-rpc-net.dev" "git+https://github.com/talex5/capnp-rpc.git#c06e767b8a4ec5a87a07e62958cdb55d0d59c59d"]
  ["capnp-rpc-unix.dev" "git+https://github.com/talex5/capnp-rpc.git#c06e767b8a4ec5a87a07e62958cdb55d0d59c59d"]
]