opam-version: "2.0"
synopsis: "Effects-based OCaml Nameserver"
description: "Effects-based OCaml Nameserver"
maintainer: ["Ryan Gibb"]
authors: ["Ryan Gibb"]
license: "MIT"
homepage: "https://github.com/RyanGibb/eon"
doc: "https://url/to/documentation"
bug-reports: "https://github.com/RyanGibb/eon/issues"
depends: [
  "ocaml" {>= "5.0.0"}
  "dune" {>= "3.4"}
  "eio_main" {>= "0.12"}
  "dns"
  "dns-server" {>= "6.2.2"}
  "dns-resolver"
  "dns-tsig"
  "cmdliner"
  "fmt"
  # tun
  "tuntap"
  # acme
  "letsencrypt" {= "dev"}
  "cohttp-eio" {= "dev"}
  "mirage-crypto-rng-eio"
  # cap
  "capnp-rpc-unix" {>= "2.0"}
  # hibernia
  "wol" {= "dev"}
  "wol-eio" {= "dev"}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/RyanGibb/eon.git"
pin-depends: [
  ["dns-certify.dev" "vendor/dns"]
  ["dns-client-lwt.dev" "vendor/dns"]
  ["dns-client-mirage.dev" "vendor/dns"]
  ["dns-client.dev" "vendor/dns"]
  ["dns-cli.dev" "vendor/dns"]
  ["dns-mirage.dev" "vendor/dns"]
  ["dns.dev" "vendor/dns"]
  ["dns-resolver.dev" "vendor/dns"]
  ["dnssec.dev" "vendor/dns"]
  ["dns-server.dev" "vendor/dns"]
  ["dns-stub.dev" "vendor/dns"]
  ["dns-tsig.dev" "vendor/dns"]
  # Eio port
  ["letsencrypt.dev" "vendor/letsencrypt"]
  ["letsencrypt-app.dev" "vendor/letsencrypt"]
  # unreleased Eio 12.0 port 
  ["http.dev" "git+https://github.com/mirage/ocaml-cohttp#e5a66f1c1e7c2e5051723e09260222994dff40cf"]
  ["cohttp.dev" "git+https://github.com/mirage/ocaml-cohttp#e5a66f1c1e7c2e5051723e09260222994dff40cf"]
  ["cohttp-eio.dev" "git+https://github.com/mirage/ocaml-cohttp#e5a66f1c1e7c2e5051723e09260222994dff40cf"]
  ["cohttp-lwt.dev" "git+https://github.com/mirage/ocaml-cohttp#e5a66f1c1e7c2e5051723e09260222994dff40cf"]
  ["cohttp-lwt-unix.dev" "git+https://github.com/mirage/ocaml-cohttp#e5a66f1c1e7c2e5051723e09260222994dff40cf"]
  # Eio port https://github.com/mirage/capnp-rpc/
  ["capnp-rpc.dev" "git+https://github.com/mirage/capnp-rpc#252fd9b064367270a48d6bc73cbcd8f188f353d9"]
  ["capnp-rpc-net.dev" "git+https://github.com/mirage/capnp-rpc#252fd9b064367270a48d6bc73cbcd8f188f353d9"]
  ["capnp-rpc-unix.dev" "git+https://github.com/mirage/capnp-rpc#252fd9b064367270a48d6bc73cbcd8f188f353d9"]
  ["wol.dev" "git+https://github.com/RyanGibb/ocaml-wake-on-lan#dd5f5e5d29900d7a2e0b884d3105037d2bb00df3"]
  ["wol-eio.dev" "git+https://github.com/RyanGibb/ocaml-wake-on-lan#dd5f5e5d29900d7a2e0b884d3105037d2bb00df3"]
]
