(library
 (name dns_client_eio)
 (modules dns_client_eio)
 (public_name eon.dns-client-eio)
 (libraries dns_log eio_main dns))

(library
 (name dns_server_eio)
 (modules dns_server_eio)
 (public_name eon.dns-server-eio)
 (libraries dns_log zonefile listen eio_main dns dns-tsig dns-server fmt))

(library
 (name dns_resolver_eio)
 (modules dns_resolver_eio)
 (public_name eon.dns-resolver-eio)
 (libraries dns_log zonefile listen eio_main dns dns-tsig dns-resolver fmt))
