(executable
 (name aeon)
 (modules aeon)
 (public_name aeon)
 (package aeon)
 (libraries server cmdliner))

(executable
 (name netcat)
 (modules netcat)
 (public_name aeon.netcat)
 (package aeon)
 (libraries transport server_args))

(library
 (name transport)
 (modules transport)
 (public_name aeon.transport)
 (libraries server client))

(library
 (name server)
 (modules server)
 (public_name aeon.server)
 (libraries dns_log zonefile eio_main dns dns-tsig dns-server fmt))

(library
 (name client)
 (modules client)
 (public_name aeon.client)
 (libraries dns_log eio_main dns))

(library
 (name dns_log)
 (modules dns_log)
 (public_name aeon.dns-log)
 (libraries eio_main dns dns-server.zone))

(library
 (name zonefile)
 (modules zonefile)
 (public_name aeon.zonefile)
 (libraries eio_main dns dns-server.zone))
