(library
 (name cap)
 (package eon)
 (libraries dns_acme eio_main capnp-rpc-lwt capnp-rpc-unix)
 (flags
  (:standard -w -53-55)))

(rule
 (targets schema.ml schema.mli)
 (deps schema.capnp)
 (action
  (run capnp compile -o %{bin:capnpc-ocaml} %{deps})))

(rule
 (targets store.ml store.mli)
 (deps store.capnp)
 (action
  (run capnp compile -o %{bin:capnpc-ocaml} %{deps})))
