(library
 (name cap)
 (package eon)
 (modules
  cert
  cert_callback
  db
  domain
  primary
  raw
  secondary
  update
  schema
  store
  )
 (libraries dns_acme eio_main capnp-rpc-unix)
 (flags
  (:standard -w -53-55)))

(library
 (name dns_acme)
 (modules dns_acme)
 (public_name eon.dns-acme)
 (libraries tls_le dns_server_eio letsencrypt-dns capnp-rpc))

(rule
 (targets schema.ml schema.mli)
 (deps schema.capnp)
 (action
  (run capnp compile -o %{bin:capnpc-ocaml} %{deps})))

(rule
 (targets store.ml store.mli)
 (deps store.capnp)
 (action
  (run capnp compile -o %{bin:capnpc-ocaml} %{deps})))
