(library
 (name dns_log)
 (modules dns_log)
 (public_name eon.dns-log)
 (libraries eio_main dns))

(library
 (name server_args)
 (modules server_args)
 (public_name eon.server-args)
 (libraries cmdliner ipaddr eio dns_log))

(library
 (name zonefile)
 (modules zonefile)
 (public_name eon.zonefile)
 (libraries eio_main dns dns-server.zone))

(library
 (name listen)
 (modules listen)
 (public_name eon.listen)
 (libraries eio_main dns))
